ops/k8s/Fanoutapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fanout
  namespace: fanout
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fanout
      version: v2
      orleans/clusterId: fanout-cluster
      orleans/serviceId: fanout-service
  template:
    metadata:
      annotations:
        prometheus.io/port: "80"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
      labels:
        app: fanout
        version: v2
        orleans/clusterId: fanout-cluster
        orleans/serviceId: fanout-service
    spec:
      serviceAccountName: orleansclient
      containers:
        - image: 156305373065.dkr.ecr.eu-west-1.amazonaws.com/fanout:v2
          name: fanout
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: fanout
  namespace: fanout
  labels:
    service: fanout
    version: v2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    app: fanout
    version: v2
